<resources>
    <string name="app_name">Save Life</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Corona Tracker</string>
    <string name="title_notifications">Prevention</string>
    <string name="welcome">Fight Against COVID-19</string>
    <string name="WelcomeText">Against COVID-19</string>
    <string name="email">Email</string>
    <string name="forget">Forget your Username/Password ? </string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Send</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup_title">Sign up for an account</string>
    <string name="semail">e-mail/mobile</string>
    <string name="spassword">password</string>
    <string name="scpassword">confirm password</string>
    <string name="ssignup">Sign Up</string>
    <string name="slogin">Login</string>
    <string name="forgot_password_header">Forgot password ?</string>
    <string name="forgot_password_header_hint">We just need your registered email address</string>
    <string name="forgot_password_header_hint_down">to send you password reset</string>
    <string name="forget_email">E-mail address</string>
    <string name="forgot_password_send">RESET PASSWORD</string>
    <string name="forgot_register_text">Dont have an account ?</string>
    <string name="forgot_register">REGITER</string>
    <string name="tips_one">Clean your hands often. Use soap and water, or an alcohol-based hand rub.</string>
    <string name="tips_two">Maintain a safe distance from anyone who is coughing or sneezing.</string>
    <string name="tips_three">Don’t touch your eyes, nose or mouth.</string>
    <string name="tips_four">Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</string>
    <string name="tips_five">Stay home if you feel unwell.</string>
    <string name="tips_six">If you have a fever, a cough, and difficulty breathing, seek medical attention. Call in advance.</string>
    <string name="youtube_API_KEY">AIzaSyBxHvRb23PPGwUukjqEuXJ0Onp3HF6SbYw</string>
    <string name="youtube_title">Stay Safe With Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="activity_header_home">Home</string>
    <string name="activity_header_login">Save Meghalaya</string>
    <string name="activity_header_prevention">Prevention</string>
    <string name="activity_header_contact">Contacts</string>
    <string name="activity_header_track">Map</string>
    <string name="activity_header_media">Videos</string>
    <string name="activity_header_search">Volunteer Tracker</string>
    <string name="activity_reset">Reset Password</string>
    <string name="activity_signup">Sign Up</string>
    <string name="oil_price">Oil Price</string>
    <string name="price_in_last_12_days">Price in last 12 days</string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="i_agree">I agree to the terms of use</string>
    <string name="assesment">  Are you experiencing any of the following symptoms?
    severe difficulty breathing (for example, struggling for each breath, speaking in single words)
    severe chest pain
    having a very hard time waking up
    feeling confused
    lost consciousness Again</string>
    <string name="assesment_answer">Please call 1075, +91-11-23978046 or email at ncov2019@gmail.com or go directly to your nearest emergency department.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="personnal_epass">Covid-19</string>
    <string name="preventive_head_top">COVID-19 Prevention</string>
    <string name="preventive_head_down">If your symptoms are mild enough that you can recover at home, you should</string>
    <string name="preventive_tips_a">●	Stay home. Do not go to public places.</string>
    <string name="preventive_tips_b">●	Drink fluids. You lose more water when you are sick. Dehydration can make symptoms worse and cause other health problems.</string>
    <string name="preventive_tips_c">●	Monitor. If your symptoms get worse, call your doctor right away. Do not go to their office without calling first. They might tell you to stay home, or they may need to take extra steps to protect staff and other patients.</string>
    <string name="preventive_tips_d">●	Ask your doctor about over-the-counter medicines that may help, like acetaminophen to lower your fever.The most important thing to do is to avoid infecting other people, especially those who are over 65 or who have other health problems.</string>
    <string name="preventive_tips_e">●	Try to stay in one place in your home. Use a separate bedroom and bathroom if you can.</string>
    <string name="preventive_tips_f">●	Tell others you are sick so they keep their distance.</string>
    <string name="preventive_tips_g">●	Cover your coughs and sneezes with a tissue or your elbow.</string>
    <string name="preventive_tips_h">●	Wear a mask over your nose and mouth if you can.</string>
    <string name="preventive_tips_i">●	Wash regularly, especially your hands.</string>
    <string name="preventive_tips_j">●	Do not share dishes, cups, eating utensils, towels, or bedding with anyone else.</string>
    <string name="preventive_tips_k">●	Clean and disinfect common surfaces like doorknobs, counters, and tabletops.</string>
    <string name="preventive_tips_l">●	Eat a balanced and varied diet there are no foods or supplements that can ‘boost’ our immune system and prevent or treat COVID-19. Nevertheless, eating a well-balanced diet, with plenty of fruits and vegetables, whole grains, plant and animal proteins and healthy fats is the best way to get all the essential nutrients we need for good health and normal immune function. As self-isolation may lead us to be less active, it is also important to pay close attention to food portions and to keep our energy balance adjusted to meet our need </string>
    <string name="preventive_tips_m">●	Establish a routine and practice mindful eating</string>
    <string name="preventive_tips_n">●	In times of uncertainty, it is normal to feel anxious, sad, stressed and scared. Maintaining a normal daily routine can help manage some of this stress. One way we can do this is by sticking to regular mealtimes and planning meals in advance. This can help us better control hunger levels, meet our nutrient requirements and allow us to get the most out of the food we have, reducing food waste.</string>
    <string name="preventive_tips_o">●	Don’t eat on the go - it’s difficult to be aware of how much you are eating. Have a seat.</string>
    <string name="preventive_tips_p">●	Resist eating straight from the bag/box. Serve your food – you’ll be able to see and appreciate what and how much you’re eating.</string>
    <string name="preventive_tips_q">●	Remove distractions. Turn off the TV and everything else with a screen, like computers, phones, etc. while eating</string>
    <string name="preventive_tips_r">●	Take small bites and chew well, while focusing on the smell, taste and texture of the food. Try to get 30 chews out of each bite.</string>
    <string name="preventive_tips_s">●	Try putting your utensils down after each bite. Don’t pick them back up until you’ve swallowed what you already have in your mouth.</string>
    <string name="preventive_tips_t">●	Don’t try to finish the whole plate. If you feel full, safely keep the leftovers.</string>
    <string name="preventive_tips_u">●	Keeping hydrated is essential for overall health. How much water we need depends on our age, sex, weight, height, level of physical activity and environmental conditions .(i.e. hot weather will likely require you to drink more water).</string>
    <string name="preventive_tips_v">●	Taking into account that around 20-30% of the water we need comes from our food, the European Food Safety Authority has set average recommendations for how much water we should drink per day depending on our age.</string>
    <string name="preventive_tips_w">●	Practice safe food hygiene</string>
    <string name="preventive_tips_x">●	According to the European Food Safety Authority, there is currently no evidence that COVID-19 is transmitted through eating food. However, good food safety practices are important to minimise the risk of foodborne illnesses.</string>
    <string name="preventive_tips_y">Home</string>
    <string name="preventive_tips_z">Home</string>
</resources>