<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/smoke"
    android:layout_height="match_parent"
    tools:context=".Login">



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/volunteer_safe">
            </ImageView>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/forgot_password_header"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/forgot_password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password_header_hint"
                android:background="@color/smoke"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:id="@+id/forgot_password_hint_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password_header_hint_down"
                android:background="@color/smoke"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/forgot_email"
                android:theme="@style/MyEditTextStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="20dp"
                android:hint="@string/forget_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"/>


            <Button
                android:id="@+id/forgot_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/bt_login"
                android:layout_marginLeft="80dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/forgot_password_send"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/forgot_register_text"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/forgot_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_register"
                android:background="@color/smoke"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15dp" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>

