<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/smoke"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/volunteer_safe">
        </ImageView>


        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/signup_title"
            android:textSize="20dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UserNameField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/user_art"
            app:startIconContentDescription="sample"
            android:hint="User Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_user"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/email_art"
            app:startIconContentDescription="sample"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_mail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/MobileField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/phone_art"
            app:startIconContentDescription="sample"
            android:hint="Mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/pass_art"
            app:startIconContentDescription="sample"
            android:hint="@string/password">
<!--            app:endIconMode="password_toggle"-->
            app:startIconContentDescription="sample"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/signup_password"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConformPasswordField"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/pass_art"
            app:startIconContentDescription="sample"
            android:hint="Confirm Password">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/signup_confirm_password"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxAgree"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree" />

    <Button
        android:id="@+id/signup_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_login"
        android:layout_marginLeft="120dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/ssignup"
        android:textColor="@color/cardview_dark_background" />


    <TextView
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/slogin"
        android:background="@color/smoke"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>


