<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/smoke"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubeView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="2dp"
                app:videoId="QH1eXvmyYMk"
                app:autoPlay="false"
                app:showFullScreenButton="false"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/prevention">
            </ImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">
                <TextView
                    android:id="@+id/tx_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_one"
                    android:textSize="20dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_one"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:id="@+id/tx_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_two"
                    android:textSize="20dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_one"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tx_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_three"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_one"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tx_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_four"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_one"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tx_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_five"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_one"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="5dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tx_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:text="@string/tips_six"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

